Fixing media width on mobile

--- a/styles.css
+++ b/styles.css
@@ -102,14 +102,6 @@
     margin: 0 auto;
 }
 
-.inner-text {
-    font-size: 1.5em;
-}
-
-.inner-text-entry {
-    font-size: 1.25em;
-}
-
 .p-text {
     filter: brightness(100%);
     transform: scale(1.0, 1.0);
@@ -161,9 +153,33 @@ p {
 }
 
 @media only screen and (max-width: 500px) {
+    .inner-text {
+        font-size: 1.25em;
+    }
 
+    .inner-text-entry {
+        font-size: 1.0em;
+    }
+
+    #label {
+        font-size: 2em;
+    }
+
+    .demo-image img {
+        max-width: 100%;
+    }
 }
 
 @media only screen and (min-width: 500px) {
+    .inner-text {
+        font-size: 1.5em;
+    }
 
+    .inner-text-entry {
+        font-size: 1.25em;
+    }
+
+    .demo-image img {
+        max-width: 30em;
+    }
 }
